create initial page (nba-blogPage)

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "blog-nba",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.1",
   "type": "module",
+  "author": "Lucas Ezidro",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
@@ -13,6 +14,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
